--- a/wp-content/themes/etereman/style.css
+++ b/wp-content/themes/etereman/style.css
@@ -648,6 +648,17 @@ li > a.active {
     font-size: 10px;
 }
 
+/* philosophy */
+.philosophy-left-header {
+    margin-bottom: 0 !important;
+}
+
+.philosophy-left-image {
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 50vh;
+}
+
 /* contact */
 .contact-info-top {
     background-repeat: no-repeat;
@@ -848,7 +859,7 @@ li > a.active {
 }
 
 .tab-content-info-right-image {
-    height: 15vh;
+    height: 20vh;
     width: 100%;
 }
 
@@ -1409,7 +1420,7 @@ footer {
     }
 
     .etereman-logo {
-        left: -7em;
+        left: -7.5em;
         top: .5em;
         height: 80px;
         width: 80px;
@@ -1524,7 +1535,6 @@ footer {
     .footer-logo {
         height: 80px;
         width: 80px;
-        left: 1%;
-        top: 20%;
+        left: 40%;
     }
 }
